IFComp/root/static/css/ifcomp.css
.label-first-place {
    background-color: #428bca
}

.label-second-place {
    background-color: #d9534f
}

.label-third-place {
    background-color: gold
}

.label-fourth-through-tenth-place {
    background-color: #5bc0de
}

.label-enth-place {
    background-color: #999
}

// Override Bootstrap
code {
    background: none;
    color: black;
}

.page-header h1 {
  padding-top: 60px;
  margin-top: -60px;
  display: inline-block; /* required for webkit browsers */
}

